Update duplicate handling and table headers

--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -218,9 +218,9 @@
           <th>Shopify Date</th>
           <th>QBO Date</th>
           <th>Action</th>
-          <th>SKU</th>
-          <th>Shopify Description</th>
-          <th>QBO Description</th>
+          <th>Parent SKU</th>
+          <th>Shopify SKU</th>
+          <th>QBO SKU</th>
           <th>Qty</th>
           <th>Total</th>
           <th></th>
